--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@mikro-orm/nestjs": "^5.0.2",
         "@mikro-orm/postgresql": "^5.2.0",
         "@nestjs/common": "^7.5.1",
+        "@nestjs/config": "^2.1.0",
         "@nestjs/core": "^7.5.1",
         "@nestjs/mapped-types": "*",
         "@nestjs/platform-express": "^7.5.1",
